--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -74,8 +74,15 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem 2.25rem 1rem 0 ;
+  padding: 0 2.25rem .25rem 0;
+  margin-bottom: 2rem;
   font-size: 14px;
   letter-spacing: .075rem;
   text-shadow: 0 0 8px rgb(0,0,0);
+}
+
+footer > a {
+  color: rgb(237, 21, 21);
+  text-shadow: 0 0 5px rgb(0, 0, 0);
+  letter-spacing: .125rem;
 }
