--- a/assets/styles/selectedCountry.css
+++ b/assets/styles/selectedCountry.css
@@ -62,15 +62,51 @@ a:hover {
   position: relative;
   margin-top: 1rem;
   min-height: 32rem;
-  padding: 
+  padding:2em;
 }
 
-/*#map {
-  width: 600px;
-  height: 400px;
-  margin: 40px 30px 0 25px;
-  padding: 0 0 0 0;
-}*/
+.container.section {
+  /*margin: 0 0 0 0;*/
+  /*padding: 10px;*/
+}
+#fullName {
+  /*margin: 0 0 0 0*/
+}
+
+#shortName {
+  margin-top: 2rem;
+  margin: 0 0 0 0;
+  color: rgb(183, 40, 40);
+}
+
+#capital{
+  margin: 5px 0 20px 0px;
+}
+
+#flag {
+  margin: .5rem 0 0 2rem;
+  max-height: 6rem;
+}
+
+#localTD, #timeZone {
+  font-weight: bold;
+  color: rgb(183, 40, 40);
+}
+
+#langList {
+  margin: 5px 0 15px 0;
+}
+
+.langFootnote {
+  font-size: 12px;
+}
+
+#map {
+  width: 38rem;
+  height: 25rem;
+  margin: .5rem 1.5rem;
+  padding: 0:
+}
 
 /*h6 {
   font-size: 16px;
@@ -84,53 +120,9 @@ a:hover {
   padding: 15px 25px 15px 25px;
 }*/
 
-/*div.s1info{
-  padding-right: 0;
-}*/
 
-/*.s1info > * {
-  margin: 10px 0 5px 0;
-}*/
+/***************/
 
-/*.s1header {
-  display: flex;
-}*/
-
-/*.s1header > div {
-  flex-direction: row;
-  align-content: space-between;
-}*/
-
-/*#fullName {
-  margin: 0 0 0 0
-}*/
-
-/*#shortName {
-  margin: 0 0 5px 0;
-  color: rgb(183, 40, 40);
-}*/
-
-/*#capital{
-  margin: 5px 0 20px 0px;
-}*/
-
-/*.s1flag {
-  margin: 10px 0 0 100px;
-  max-height: 100px;
-}*/
-
-/*#localTD, #timeZone {
-  font-weight: bold;
-  color: rgb(183, 40, 40);
-}*/
-
-/*#langList {
-  margin: 5px 0 15px 0;
-}*/
-
-/*#langFootnote {
-  font-size: 12px;
-}*/
 
 /*
 .preTravel {
